# Advent-of-Code

./: README.md
2018/: .gitignore  README.md
2018/cargo_project/: Cargo.toml
2018/cargo_project/src/: main.rs
2018/day4/: Cargo.toml
2018/day4/src/: main.rs
2018/tasks_offline/day 1/: Day 1 - Advent of Code 2018.html
2018/tasks_offline/day 2/: Day 2 - Advent of Code 2018.html
2018/tasks_offline/day 4/: Day 4 - Advent of Code 2018.html
2018/tasks_offline/day 5/: Day 5 - Advent of Code 2018.html
2018/tasks_offline/day6/: Day 6 - Advent of Code 2018.html
2018/tasks_offline/day7/: Day 7 - Advent of Code 2018.html
2019/: CMakeLists.txt  README.md  main.cpp  setup.h  utils.h
2019/day1/: day1.h
2019/day2/: day2.h  intprogram.h
2019/day3/: day3.h
2019/day4/: day4.h
2019/day5/: day5.h  instruction.h  intprogram.h  intprogram_improved.h
2019/day6/: day6.h  orbitgraph.h
2019/tasks_offline/day1/: Day 1 - Advent of Code 2019.html  Day 1 - Advent of Code 2019_part2.html
2019/tasks_offline/day2/: Day 2 - Advent of Code 2019.html
2020/: README.md
2020/day1/: day1.hs  day1.py
2020/day2/: day2.hs
2020/day3/: day3.hs
2020/day4/: day4.hs
2020/day5/: day5.hs
2020/day6/: day6.hs
2025/: .gitignore  init_day.sh
2025/day1/: puzzle1.py  puzzle2.py
2025/day1/test/: test_puzzle1.py  test_puzzle2.py
2025/day2/: puzzle1.py
2025/day2/test/: test_puzzle1.py
2025/day3/: puzzle1.py  puzzle2.py
2025/day3/test/: test_puzzle1.py  test_puzzle2.py
2025/day4/: puzzle1.py  puzzle2.py
2025/day4/test/: test_puzzle1.py  test_puzzle2.py
2025/day5/: puzzle1.py  puzzle2.py
2025/day5/test/: test_puzzle1.py  test_puzzle2.py
2025/day6/: puzzle1.py  puzzle2.py
2025/day6/test/: test_puzzle1.py  test_puzzle2.py
2025/day7/: puzzle1.py  puzzle2.py
2025/day7/test/: test_puzzle1.py  test_puzzle2.py
2025/day8/: puzzle1.py  puzzle2.py
2025/day9/: puzzle1.py  puzzle2.py
(+9 files in other folders)
